--- a/src/app/pages/students/edit-student/edit-student.component.html
+++ b/src/app/pages/students/edit-student/edit-student.component.html
@@ -1,3 +1,6 @@
+<ng2-toasty [position]="position"></ng2-toasty>
+
+
 <div class="page-content fade-in-up">
   <div class="row">
     <div class="col-md-12">
@@ -410,7 +413,7 @@
                   <mat-form-field class="example-full-width">
                     <mat-select placeholder="Region" name="region" formControlName="region" value="{{stdProfileDetailsData?.region}}">
                       <mat-option value="URBAN">Urban</mat-option>
-                      <mat-option value="RURAL">Rural</mat-option>
+                      <mat-option value="RURAL">Rural</mat-option> 
                     </mat-select>
                   </mat-form-field>
                 </div>
@@ -861,5 +864,4 @@
 </div>
 
 
-<!-- <ng2-toasty [position]="position"></ng2-toasty> -->
 <ng2-toasty [position]="position"></ng2-toasty>
