image upload fix

--- a/src/app/pages/students/add-student-details/add-student-details.component.html
+++ b/src/app/pages/students/add-student-details/add-student-details.component.html
@@ -396,11 +396,14 @@
               </div>
 
               <div class="col-sm-3 pr-4 pl-4">
-                <mat-form-field class="example-full-width">
+                <!-- <mat-form-field class="example-full-width">
                   <mat-select placeholder="Disability" name="disability" formControlName="disability">
                     <mat-option value="yes">YES</mat-option>
                     <mat-option value="no">NO</mat-option>
                   </mat-select>
+                </mat-form-field> -->
+                <mat-form-field class="example-full-width">
+                  <input matInput type="text" placeholder="Disability" name="disability" formControlName="disability">
                 </mat-form-field>
               </div>
 
